objects/Correspondence_Fulfilment__c.object
<CustomObject>
    <fields>
        <fullName>Add1__c</fullName>
        <description>Address 1(always has the street address in this filed)</description>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add2__c</fullName>
        <description>Address 2 (apt or floor number)</description>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCode__c</fullName>
        <label>Brand Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandDesc__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>Brand_Corres__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>Brand_Corres__r.BrandCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Corres__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Correspondence &amp; Fulfilments</relationshipLabel>
        <relationshipName>Correspondence_Fulfilments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Correspondence &amp; Fulfilments</relationshipLabel>
        <relationshipName>Correspondence_Fulfilments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Zip_Code__c</fullName>
        <description>Feed Outbound - Customer Zip Code</description>
        <formula>Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feed outbound- Correspondence</description>
        <label>Document Type Code</label>
        <referenceTo>DocumentType__c</referenceTo>
        <relationshipLabel>Correspondence &amp; Fulfilments</relationshipLabel>
        <relationshipName>Correspondence_Fulfilments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>TEXT(DocType__r.DocTyp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FName__c</fullName>
        <encrypted>true</encrypted>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileExtension__c</fullName>
        <formula>RIGHT( FileName__c , LEN(FileName__c ) - FIND(&quot;.&quot;,FileName__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FileExtension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hcode__c</fullName>
        <formula>0.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Always 0.00</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LName__c</fullName>
        <encrypted>true</encrypted>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LetterDate__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <label>Letter Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LetterDesc__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>DocType__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_head__c</fullName>
        <label>Letter head</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MName__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterId__c</fullName>
        <label>Master ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_ID__c</fullName>
        <label>Master ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Suffix__c</fullName>
        <label>Name Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nameprefix__c</fullName>
        <label>Name Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>DocType__r.PkgCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packagecode__c</fullName>
        <label>Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires_Fulfillment__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>DocType__r.ReqFulfillment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Fulfillment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>ST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <description>Feed outbound- Correspondence</description>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X0__c</fullName>
        <description>Feed Outbound - Hardcode value &apos;0&apos;</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <description>Feed Outbound - HardCode value &apos;1&apos;</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <description>Feed Outbound - HardCode value &apos;3&apos;</description>
        <formula>3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Correspondence &amp; Fulfilment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{000000000}</displayFormat>
        <label>Correspondence &amp; Fulfilment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondence &amp; Fulfilments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>